{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 100,
  "lineage": "2c8b1c3a-0180-5b3f-769d-42139063e939",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035672b7e686f1d03",
            "arn": "arn:aws:ec2:us-west-2:388691194728:elastic-ip/eipalloc-035672b7e686f1d03",
            "domain": "vpc",
            "id": "eipalloc-035672b7e686f1d03",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-100-22-246-93.us-west-2.compute.amazonaws.com",
            "public_ip": "100.22.246.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-nat-eip-1",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-nat-eip-1",
              "Project": "Troy-ollama-chat-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_vpc.ollama_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ccb4e0132892ea7",
            "arn": "arn:aws:ec2:us-west-2:388691194728:elastic-ip/eipalloc-09ccb4e0132892ea7",
            "domain": "vpc",
            "id": "eipalloc-09ccb4e0132892ea7",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-50-112-106-221.us-west-2.compute.amazonaws.com",
            "public_ip": "50.112.106.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-nat-eip-2",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-nat-eip-2",
              "Project": "Troy-ollama-chat-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_vpc.ollama_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ollama_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:internet-gateway/igw-015c2ec438ce86691",
            "id": "igw-015c2ec438ce86691",
            "owner_id": "388691194728",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-igw",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-igw",
              "Project": "Troy-ollama-chat-app"
            },
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:loadbalancer/app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4",
            "arn_suffix": "app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Troy-ollama-chat-app-alb-2060738799.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:loadbalancer/app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Troy-ollama-chat-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d58b171fda5ec13b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ade655b399661ab3"
              },
              {
                "subnet_id": "subnet-0e933a4e3a01dab3f"
              }
            ],
            "subnets": [
              "subnet-0ade655b399661ab3",
              "subnet-0e933a4e3a01dab3f"
            ],
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-alb",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-alb",
              "Project": "Troy-ollama-chat-app"
            },
            "vpc_id": "vpc-079b11ddb736129af",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener/app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4/89bb8a527b3c5a30",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/Troy-ollama-chat-app-frontend-tg/9a8368fb1883f6fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener/app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4/89bb8a527b3c5a30",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:loadbalancer/app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-http-listener",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-http-listener",
              "Project": "Troy-ollama-chat-app"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/Troy-ollama-chat-app-backend-tg/50cb5ff4b815ae59",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener-rule/app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4/89bb8a527b3c5a30/d462aa15b61c56e5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*",
                      "/health"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener-rule/app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4/89bb8a527b3c5a30/d462aa15b61c56e5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener/app/Troy-ollama-chat-app-alb/5fee64ccb7a981e4/89bb8a527b3c5a30",
            "priority": 100,
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-api-routing",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-api-routing",
              "Project": "Troy-ollama-chat-app"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend_tg",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/Troy-ollama-chat-app-backend-tg/50cb5ff4b815ae59",
            "arn_suffix": "targetgroup/Troy-ollama-chat-app-backend-tg/50cb5ff4b815ae59",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/Troy-ollama-chat-app-backend-tg/50cb5ff4b815ae59",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Troy-ollama-chat-app-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-backend-tg",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-backend-tg",
              "Project": "Troy-ollama-chat-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/Troy-ollama-chat-app-frontend-tg/9a8368fb1883f6fb",
            "arn_suffix": "targetgroup/Troy-ollama-chat-app-frontend-tg/9a8368fb1883f6fb",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/Troy-ollama-chat-app-frontend-tg/9a8368fb1883f6fb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Troy-ollama-chat-app-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-frontend-tg",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-frontend-tg",
              "Project": "Troy-ollama-chat-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035672b7e686f1d03",
            "association_id": "eipassoc-07bed92a958b027bf",
            "connectivity_type": "public",
            "id": "nat-0ee633ba165f37311",
            "network_interface_id": "eni-03d9575d0d91e7b0d",
            "private_ip": "10.0.1.90",
            "public_ip": "100.22.246.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ade655b399661ab3",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-nat-gw-1",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-nat-gw-1",
              "Project": "Troy-ollama-chat-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.ollama_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ccb4e0132892ea7",
            "association_id": "eipassoc-094a8064eee598e09",
            "connectivity_type": "public",
            "id": "nat-07ef46bd1e93deb4b",
            "network_interface_id": "eni-08e0779e1415e0c28",
            "private_ip": "10.0.2.133",
            "public_ip": "50.112.106.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e933a4e3a01dab3f",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-nat-gw-2",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-nat-gw-2",
              "Project": "Troy-ollama-chat-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.ollama_igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "backend_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:network-acl/acl-0a4610f1ff35142b4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a4610f1ff35142b4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 8000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 8000
              }
            ],
            "owner_id": "388691194728",
            "subnet_ids": [
              "subnet-062687fb9c98206b5",
              "subnet-068a541b3e31da9f6"
            ],
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-backend-nacl",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-backend-nacl",
              "Project": "Troy-ollama-chat-app"
            },
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:route-table/rtb-035c5373764a50a70",
            "id": "rtb-035c5373764a50a70",
            "owner_id": "388691194728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ee633ba165f37311",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-private-rt-1",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-private-rt-1",
              "Project": "Troy-ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.ollama_igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:route-table/rtb-03e4fa4f8c462f1f7",
            "id": "rtb-03e4fa4f8c462f1f7",
            "owner_id": "388691194728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ef46bd1e93deb4b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-private-rt-2",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-private-rt-2",
              "Project": "Troy-ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.ollama_igw",
            "aws_nat_gateway.nat_gw_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:route-table/rtb-07a5dd88d768b8779",
            "id": "rtb-07a5dd88d768b8779",
            "owner_id": "388691194728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015c2ec438ce86691",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-public-rt",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-public-rt",
              "Project": "Troy-ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_vpc.ollama_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e537fb843c896879",
            "route_table_id": "rtb-035c5373764a50a70",
            "subnet_id": "subnet-062687fb9c98206b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.ollama_igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.private_rt_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072976fd0dc52f866",
            "route_table_id": "rtb-03e4fa4f8c462f1f7",
            "subnet_id": "subnet-068a541b3e31da9f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.ollama_igw",
            "aws_nat_gateway.nat_gw_2",
            "aws_route_table.private_rt_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0823edffa884cd9c9",
            "route_table_id": "rtb-07a5dd88d768b8779",
            "subnet_id": "subnet-0ade655b399661ab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001bca57565bfd9c3",
            "route_table_id": "rtb-07a5dd88d768b8779",
            "subnet_id": "subnet-0e933a4e3a01dab3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:security-group/sg-0d58b171fda5ec13b",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d58b171fda5ec13b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Troy-ollama-chat-app-alb-sg",
            "name_prefix": "",
            "owner_id": "388691194728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-alb-sg",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-alb-sg",
              "Project": "Troy-ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:security-group/sg-0cb2d9d2fd5a87fb1",
            "description": "Security group for Flask backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb2d9d2fd5a87fb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d58b171fda5ec13b"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "Troy-ollama-chat-app-backend-sg",
            "name_prefix": "",
            "owner_id": "388691194728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-backend-sg",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-backend-sg",
              "Project": "Troy-ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:security-group/sg-06709cadc959026f6",
            "description": "Security group for React frontend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06709cadc959026f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d58b171fda5ec13b"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "Troy-ollama-chat-app-frontend-sg",
            "name_prefix": "",
            "owner_id": "388691194728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-frontend-sg",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-frontend-sg",
              "Project": "Troy-ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:subnet/subnet-062687fb9c98206b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062687fb9c98206b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388691194728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-private-subnet-1",
              "Project": "Troy-ollama-chat-app",
              "Tier": "Application",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-private-subnet-1",
              "Project": "Troy-ollama-chat-app",
              "Tier": "Application",
              "Type": "Private"
            },
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:subnet/subnet-068a541b3e31da9f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068a541b3e31da9f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388691194728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-private-subnet-2",
              "Project": "Troy-ollama-chat-app",
              "Tier": "Application",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-private-subnet-2",
              "Project": "Troy-ollama-chat-app",
              "Tier": "Application",
              "Type": "Private"
            },
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:subnet/subnet-0ade655b399661ab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ade655b399661ab3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388691194728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-public-subnet-1",
              "Project": "Troy-ollama-chat-app",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-public-subnet-1",
              "Project": "Troy-ollama-chat-app",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:subnet/subnet-0e933a4e3a01dab3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e933a4e3a01dab3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388691194728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-public-subnet-2",
              "Project": "Troy-ollama-chat-app",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-public-subnet-2",
              "Project": "Troy-ollama-chat-app",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-079b11ddb736129af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ollama_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:vpc/vpc-079b11ddb736129af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1a3a263103112c4",
            "default_route_table_id": "rtb-0f6217f44a6018541",
            "default_security_group_id": "sg-07bed9e339efd37bf",
            "dhcp_options_id": "dopt-0b6164978718ff062",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079b11ddb736129af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f6217f44a6018541",
            "owner_id": "388691194728",
            "tags": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-vpc",
              "Project": "Troy-ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Troy-ollama-chat-app-vpc",
              "Project": "Troy-ollama-chat-app"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}